# soulmap

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_image_url_to_posts.py  003_image_urls_migration.py  004_add_todos_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: analyses.py  auth.py  posts.py  settings.py  todos.py  uploads.py
backend/app/core/: ai_service.py  security.py
backend/app/models/: __init__.py  analysis.py  post.py  todo.py  user.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  post.py  todo.py
backend/src/: ai.rs  auth.rs  db.rs  main.rs  models.rs
backend/src/api/: analyses.rs  auth.rs  chat.rs  mod.rs  posts.rs  settings.rs  todos.rs  uploads.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/posts/: page.tsx
frontend/app/register/: page.tsx
frontend/components/analysis/: analysis-result.tsx  emotion-chart.tsx  personality-radar.tsx
frontend/components/dashboard/: todo-list.tsx
frontend/components/layout/: header.tsx  model-selector.tsx  theme-toggle.tsx
frontend/components/posts/: ai-chat.tsx  post-card.tsx  post-form.tsx
frontend/hooks/: use-analysis.ts  use-posts.ts  use-todos.ts
frontend/lib/: api.ts
frontend/types/: index.ts
(+5 files in other folders)
